# lzd

./: .gitignore  Cargo.toml  README.md
crates/gen-master-key/: Cargo.toml
crates/gen-master-key/src/: main.rs
crates/lzd-db/: Cargo.toml  diesel.toml
crates/lzd-db/sql/ddl/: init.sql
crates/lzd-db/src/: lib.rs  models.rs  schema.rs  sql_functions.rs  tests.rs  types_cache.rs
crates/lzd-user-auth/: Cargo.toml  app-config.toml
crates/lzd-user-auth/src/: application.rs  cipher.rs  config.rs  jobs.rs  login.rs  main.rs  routes.rs
crates/lzd-user-auth/src/jobs/: email_verification.rs
crates/lzd-user-auth/templates/: app-main.html  base.html  login.html  register.html  verify-email.html
crates/lzd-user-auth/templates/email/: base.html  base.txt  verification.html  verification.txt
