[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Gerald E. Butler <gerald.edward.butler@gmail.com>"]

[workspace.dependencies]

# local crate dependencies

lzd-db = { version = "*", path = "crates/lzd-db" }

# from crates.io

aes-gcm-siv = "0.11.1"
anyhow = "1.0.96"
arc-swap = "1.7.1"
askama = "0.12.1"
askama_axum = "0.4.0"
async-trait = "0.1.86"
axum = "0.8.1"
base64 = "0.22.1"
crypto-common = "0.1.6"
dotenvy = "0.15.7"
humantime = "2.1.0"
humantime-serde = "1.1.1"
itertools = "0.14.0"
jiff = "0.2.1"
rand = "0.9.0"
rs_sha512 = "0.1.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = "1.15.1"


[workspace.lints.rust]
unsafe_code = "forbid"
