[package]
name = "lzd-db"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]

# Workspace Dependencies

dotenvy.workspace = true
jiff.workspace = true
tokio.workspace = true
uuid.workspace = true

# Other Dependencies

diesel = { version = "2.2", features = ["postgres", "uuid"] }
diesel-async = { version = "0.5", features = ["postgres"] }
jiff-diesel = { version = "0.1", features = ["postgres"] }

[dev-dependencies]

# DEV Workspace Dependencies

[lints]
workspace = true
