[package]
name = "lzd-user-auth"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]

# Local dependencies

lzd-db.workspace = true

# Workspace Dependencies

aes-gcm-siv.workspace = true
askama.workspace = true
askama_axum.workspace = true
async-trait.workspace = true
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
crypto-common.workspace = true
itertools.workspace = true
rs_sha512.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

# Crates.io Dependencies

argon2 = "0.5.3"
axum-login = "0.17.0"
axum-messages = "0.8.0"
hyper = { version = "1.6.0", features = ["full"] }
tower = "0.5.2"
http = "1.2.0"

[lints]
workspace = true

[profile.dev.package.askama_derive]
opt-level = 3
